--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@ layout: compress
     <meta name="yandex-verification" content="b3c877be82340416" />
     {% endif %}
     {% include icons.html %}
+    {% include pixel.html %}
   </head>
   <body>
       <header>
