--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,8 +96,8 @@ layout: compress
         </small></p>
         <p><small>
           {{ site.site_languages[page.lang] }}: 
-          <a href="/">English</a>, 
-          <a href="/ru/">Русский</a>.
+          <a href="{{site.baseurl }}/">English</a>, 
+          <a href="{{site.baseurl }}/ru/">Русский</a>.
         </small></p>
         {% if site.github.is_project_page %}
           <p>Project maintained by <a href="{{ site.github.owner_url }}"
