--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,13 +23,13 @@ layout: compress
     {% endfor %}
     <link rel="alternate" type="application/rss+xml" 
     title="{{ site.title[page.lang] }}" href="{{ site.feed[page.lang] 
-     | prepend: site.url }}">
+     | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' 
-    | append: site.github.build_revision | relative_url }}">
+    | append: site.github.build_revision | prepend: site.baseurl | relative_url }}">
     <script 
       src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
     ></script>
-    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/main.js' | prepend: site.baseurl | relative_url }}"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
