--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -1,4 +1,4 @@
-{% assign ifolder = "/assets/images/icons" %}   
+{% assign ifolder = site.baseurl + "/assets/images/icons" %}   
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="57x57" href="{{ ifolder }}/apple-icon-57x57.png">
