--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -1,6 +1,6 @@
 {% assign ifolder = site.baseurl + "/assets/images/icons" %}   
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="57x57" href="{{ ifolder }}/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="{{ ifolder }}/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="{{ ifolder }}/apple-icon-72x72.png">
@@ -18,4 +18,4 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="{{ ifolder }}/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <meta name="msapplication-config" content="browserconfig.xml" />
+    <meta name="msapplication-config" content="{{ site.baseurl }}/browserconfig.xml" />
