--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -1,4 +1,4 @@
-{% assign ifolder = "/assets/images/icons" | prepend site.baseurl %}   
+{% assign ifolder = "/assets/images/icons" | relative_url %}   
     <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
     <link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="57x57" href="{{ ifolder}}/apple-icon-57x57.png">
